# FastAPI_3

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  task_1.py  task_2.py  task_3.py  task_4.py
src/app/: main.py
